--- a/src/App.css
+++ b/src/App.css
@@ -15,16 +15,66 @@
 .flower-logo {
   margin: 0 1rem;
   font-size: 3.5rem;
-  color: #062941;
   font-family: "Times New Roman", Times, serif;
+}
+.flower-logo {
+  color: #062941;
 }
 li {
   list-style: none;
 }
+
 .nav li {
   display: inline-block;
   padding: 1rem;
   font-size: bold;
   margin-left: 0.5rem;
   color: #de3163;
+}
+.flower-title {
+  /* text-shadow: -1px 2px rgba(128, 128, 128, 0.5); */
+  /* text-transform: uppercase; */
+  background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+}
+img {
+  width: 250px;
+  height: 250px;
+}
+
+.flowers-wraper {
+  margin: 3rem auto;
+  /* background-color: rgb(239, 239, 172); */
+}
+a {
+  text-decoration: none;
+  color: #e13560;
+}
+.price {
+  color: black;
+  font-size: 1.1rem;
+}
+.price:hover {
+  color: red;
+}
+.flower-title {
+  font-weight: 500;
+}
+.flowers-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 300px);
+  justify-content: center;
+  grid-gap: 2rem;
+}
+
+.flower-item {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-row-gap: 2rem;
+  height: 100%;
+  padding: 2rem;
+  place-items: center;
+  border: none;
 }
