--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,9 @@
   margin: 0 1rem;
   font-size: 3.5rem;
   font-family: "Times New Roman", Times, serif;
+  color: goldenrod;
 }
-.flower-logo {
-  color: #062941;
-}
+
 li {
   list-style: none;
 }
@@ -34,14 +33,14 @@ li {
 .flower-title {
   /* text-shadow: -1px 2px rgba(128, 128, 128, 0.5); */
   /* text-transform: uppercase; */
-  background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+  background: linear-gradient(to right, #328c8c 0%, #330867 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bold;
 }
 img {
   width: 250px;
-  height: 250px;
+  height: 300px;
 }
 
 .flowers-wraper {
@@ -55,12 +54,15 @@ a {
 .price {
   color: black;
   font-size: 1.1rem;
+  /* border: none;
+  background-color: rgb(235, 186, 194);
+  padding: 6px; */
 }
 .price:hover {
   color: red;
 }
 .flower-title {
-  font-weight: 500;
+  font-weight: 700;
 }
 .flowers-list {
   display: grid;
