--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,11 @@
 }
 
 .header {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: center;
-  position: relative;
-  height: 100px;
+  /* display: grid; */
+  /* grid-template-columns: auto 1fr; */
+  /* align-items: center; */
+  /* position: relative; */
+  /* height: 100px; */
   background: -webkit-linear-gradient(rgb(230, 161, 172), white);
 }
 .flower-logo {
@@ -22,9 +22,11 @@
 li {
   list-style: none;
 }
-
+.nav {
+  align-items: ;
+}
 .nav li {
-  display: inline-block;
+  /* display: inline-block; */
   padding: 1rem;
   font-size: bold;
   margin-left: 0.5rem;
@@ -44,8 +46,10 @@ img {
 }
 
 .flowers-wraper {
-  margin: 3rem auto;
+  /* margin: 3rem auto; */
   /* background-color: rgb(239, 239, 172); */
+  /* display: grid; */
+  /* grid-template-columns: 2fr 19fr; */
 }
 a {
   text-decoration: none;
@@ -66,17 +70,31 @@ a {
 }
 .flowers-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 300px);
+  grid-template-columns: repeat(4, 1fr);
   justify-content: center;
   grid-gap: 2rem;
 }
 
 .flower-item {
   display: grid;
-  grid-template-rows: 1fr auto;
+  /* grid-template-rows: 1fr auto; */
   grid-row-gap: 2rem;
   height: 100%;
   padding: 2rem;
   place-items: center;
   border: none;
+}
+
+.App {
+  display: grid;
+  grid-template-columns: 2fr 19fr;
+}
+
+.header {
+  margin-right: 1rem;
+  /* display: grid; */
+  /* grid-auto-flow: row; */
+  /* width: 100%; */
+  height: 100%;
+  /* align-items: center; */
 }
