--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,6 @@
 }
 
 .header {
-  /* display: grid; */
-  /* grid-template-columns: auto 1fr; */
-  /* align-items: center; */
-  /* position: relative; */
-  /* height: 100px; */
   background: -webkit-linear-gradient(rgb(230, 161, 172), white);
 }
 .flower-logo {
@@ -23,7 +18,7 @@ li {
   list-style: none;
 }
 .nav {
-  align-items: ;
+  /* align-items: ; */
 }
 .nav li {
   /* display: inline-block; */
@@ -70,15 +65,15 @@ a {
 }
 .flowers-list {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, 300px);
   justify-content: center;
-  grid-gap: 2rem;
+  /* grid-gap: 0.5rem; */
 }
 
 .flower-item {
   display: grid;
   /* grid-template-rows: 1fr auto; */
-  grid-row-gap: 2rem;
+  grid-row-gap: 1rem;
   height: 100%;
   padding: 2rem;
   place-items: center;
@@ -92,9 +87,5 @@ a {
 
 .header {
   margin-right: 1rem;
-  /* display: grid; */
-  /* grid-auto-flow: row; */
-  /* width: 100%; */
   height: 100%;
-  /* align-items: center; */
 }
