added a serach bar, I think i've finished but need to style it properr

--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,9 @@
 li {
   list-style: none;
 }
-.nav {
+/* .nav {
   /* align-items: ; */
-}
-.nav li {
+*/ .nav li {
   /* display: inline-block; */
   padding: 1rem;
   font-size: bold;
