--- a/src/App.css
+++ b/src/App.css
@@ -5,23 +5,20 @@
 }
 
 .header {
-  background: -webkit-linear-gradient(rgb(230, 161, 172), white);
+  background: -webkit-linear-gradient(rgb(234, 186, 194), white);
 }
 .flower-logo {
   margin: 0 1rem;
   font-size: 3.5rem;
   font-family: "Times New Roman", Times, serif;
-  color: goldenrod;
-}
-.body {
+  color: rgb(146, 110, 20);
 }
 
 li {
   list-style: none;
 }
-/* .nav {
-  /* align-items: ; */
-*/ .nav li {
+
+.nav li {
   /* display: inline-block; */
   padding: 1rem;
   font-size: bold;
@@ -42,12 +39,6 @@ img {
   border-radius: 50%;
 }
 
-.flowers-wraper {
-  /* margin: 3rem auto; */
-  /* background-color: rgb(239, 239, 172); */
-  /* display: grid; */
-  /* grid-template-columns: 2fr 19fr; */
-}
 a {
   text-decoration: none;
   color: #e13560;
@@ -91,4 +82,47 @@ a {
 .header {
   margin-right: 1rem;
   height: 100%;
+}
+
+.flower-container-description {
+  display: grid;
+  grid-auto-flow: column;
+  margin-top: 1rem;
+  /* align-items: center; */
+  justify-content: center;
+  margin-left: 10rem;
+}
+
+.single-flower img {
+  margin-top: 1rem;
+  width: 300px;
+  border-radius: 0ch;
+  justify-content: center;
+  object-fit: cover;
+  padding-bottom: 2rem;
+  font-size: 5rem;
+  margin-right: 2rem;
+}
+.title {
+  border-bottom: 3px solid rgb(157, 110, 155);
+  margin-top: 2rem;
+  margin-left: 2rem;
+}
+.flower-detail p {
+  padding-top: 4rem;
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
+  margin-bottom: 3rem;
+}
+.flower-detail span {
+  margin-left: 2rem;
+}
+.basket-button {
+  margin-left: 3rem;
+  border: none;
+  background-color: rgb(237, 204, 209);
+  padding: 1rem;
+}
+.basket-button:hover {
+  background-color: crimson;
 }
