--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,18 @@
 .header {
   background: -webkit-linear-gradient(rgb(234, 186, 194), white);
 }
+.body {
+  background-image: url("./src/images/flower.jpg");
+  display: grid;
+  background-color: #fbfbfd;
+  background-size: 800px;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  height: 500px;
+  padding: 1rem;
+  align-content: start;
+  gap: 0.5rem;
+}
 .flower-logo {
   margin: 0 1rem;
   font-size: 3.5rem;
@@ -26,8 +38,6 @@ li {
   color: #de3163;
 }
 .flower-title {
-  /* text-shadow: -1px 2px rgba(128, 128, 128, 0.5); */
-  /* text-transform: uppercase; */
   background: linear-gradient(to right, #328c8c 0%, #330867 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -36,7 +46,7 @@ li {
 img {
   width: 250px;
   height: 300px;
-  border-radius: 50%;
+  border-radius: 10px;
 }
 
 a {
@@ -46,9 +56,6 @@ a {
 .price {
   color: black;
   font-size: 1.1rem;
-  /* border: none;
-  background-color: rgb(235, 186, 194);
-  padding: 6px; */
 }
 .price:hover {
   color: red;
@@ -65,7 +72,6 @@ a {
 
 .flower-item {
   display: grid;
-  /* grid-template-rows: 1fr auto; */
   grid-row-gap: 1rem;
   height: 100%;
   padding: 2rem;
@@ -76,7 +82,6 @@ a {
 .App {
   display: grid;
   grid-template-columns: 2fr 19fr;
-  background-color: ;
 }
 
 .header {
@@ -96,6 +101,7 @@ a {
 .single-flower img {
   margin-top: 1rem;
   width: 300px;
+  height: 500px;
   border-radius: 0ch;
   justify-content: center;
   object-fit: cover;
@@ -124,5 +130,58 @@ a {
   padding: 1rem;
 }
 .basket-button:hover {
-  background-color: crimson;
+  background-color: rgb(203, 124, 140);
+}
+.home {
+  background-image: url("/src/images/flower.jpg");
+  object-fit: fill;
+  background-position: left;
+  height: 100%;
+  width: 100%;
+}
+.hi {
+  background-color: white;
+  text-align: center;
+  height: fit-content;
+  padding: 0.5rem 1rem;
+  font-size: 20px;
+  padding-bottom: 2rem;
+  padding-top: 1rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.search {
+  width: 30%;
+  margin: auto;
+  padding: 1rem;
+  border-radius: 25px;
+  background-color: rgb(246, 236, 237);
+  color: black;
+  margin-left: 40rem;
+  margin-top: 1rem;
+  border: none;
+  /* padding: 2rem; */
+}
+.basket-wraper {
+  align-content: center;
+  width: 50vw;
+  margin: 0 auto;
+  margin-left: 25rem;
+}
+.basket-wraper ul {
+  border: 1px solid black;
+  border: none;
+  height: 50vh;
+  margin-right: 25rem;
+  padding: 2rem;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  background-color: rgb(236, 233, 224);
+}
+.basket-wraper-list img {
+  width: 120px;
+  height: 120px;
+  padding-top: 1rem;
+}
+.total {
+  padding-top: 2rem;
 }
