--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ a {
   display: grid;
   grid-template-columns: repeat(auto-fit, 300px);
   justify-content: center;
+  /* border: 1px solid black; */
   /* grid-gap: 0.5rem; */
 }
 
@@ -88,11 +89,25 @@ a {
   margin-right: 1rem;
   height: 100%;
 }
-
+.category-list {
+  border: 1px solid rgb(202, 86, 105);
+}
+.basket-wraper h3 {
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+  padding-left: 3rem;
+  font-size: 30px;
+  font-weight: 2rem;
+  color: #de3163;
+}
+.total-basket {
+  margin-top: 2rem;
+  margin-left: 1.5rem;
+}
 .flower-container-description {
   display: grid;
   grid-auto-flow: column;
-  margin-top: 1rem;
+  margin-top: 2rem;
   /* align-items: center; */
   justify-content: center;
   margin-left: 10rem;
@@ -162,19 +177,21 @@ a {
   /* padding: 2rem; */
 }
 .basket-wraper {
-  align-content: center;
-  width: 50vw;
+  align-items: center;
+  width: 60vw;
   margin: 0 auto;
   margin-left: 25rem;
+  /* padding-left: 20rem; */
 }
 .basket-wraper ul {
+  align-items: center;
   border: 1px solid black;
   border: none;
-  height: 50vh;
+  height: 60vh;
   margin-right: 25rem;
   padding: 2rem;
   overflow-y: auto;
-  scrollbar-width: thin;
+  /* scrollbar-width: thin; */
   background-color: rgb(236, 233, 224);
 }
 .basket-wraper-list img {
@@ -182,6 +199,11 @@ a {
   height: 120px;
   padding-top: 1rem;
 }
+.basket-wraper-list {
+  width: 200px;
+  height: 200px;
+}
+
 .total {
   padding-top: 2rem;
 }
